tests/ui/rfcs/rfc-2091-track-caller/only-for-fns.rs
#[track_caller]
struct S;
//~^^ ERROR attribute cannot be used on

fn main() {}
